Initial try on llg solver

--- a/tex/report_2.tex
+++ b/tex/report_2.tex
@@ -8,7 +8,7 @@
 	\thispagestyle{titlepage}
 	
 	\centering{
-		\Huge{\textbf{ Simulating magnons and spin chains }}
+		\Huge{\textbf{ Numerical simulation of magnons }}
 	}
 
 	\vspace{4mm}
