--- a/tex/report_2.tex
+++ b/tex/report_2.tex
@@ -37,7 +37,14 @@
 \setlength{\parskip}{1em}
 \newpage
 
-\include{./introduction}
+\part{Introduction \& Background}
+
+\input{./introduction}
+\input{./code_overview}
+
+\newpage
+\part{Results and discussion}
+\input{./problem_1}
 
 \bibliographystyle{unsrt}
 \bibliography{references}
