--- a/tex/report_2.tex
+++ b/tex/report_2.tex
@@ -37,14 +37,23 @@
 \setlength{\parskip}{1em}
 \newpage
 
-\part{Introduction \& Background}
+\part{Introduction}
 
 \input{./introduction}
-\input{./code_overview}
-
 \newpage
+
+\part{Code overview}
+
+\input{./code_overview}
+\newpage
+
 \part{Results and discussion}
 \input{./problem_1}
+\input{./problem_2}
+
+\newpage
+\part{Conclusion}
+\input{./conc}
 
 \bibliographystyle{unsrt}
 \bibliography{references}
