--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -3,11 +3,10 @@
 %\usepackage[left=2.00cm,right=2.00cm,top=2.00cm,bottom=2.00cm]{geometry}
 \usepackage{transparent}
 \usepackage{amsmath}                                 % AMS Math Package
-\usepackage[utf8]{inputenc}
 \usepackage{amsthm}                                  % Theorem Formatting
 \usepackage{amssymb}                                 % Math symbols such as \mathbb
 \usepackage{graphicx}                                % Allows for eps images
-\usepackage[dvips,a4paper,margin=1in,bottom=1in]{geometry}
+\usepackage[dvips,margin=1in,bottom=1in]{geometry}
 \usepackage{tensor}
 \usepackage{tcolorbox}
 \usepackage[explicit,compact]{titlesec}
