--- a/tex/references.bib
+++ b/tex/references.bib
@@ -1,60 +1,26 @@
-@article{event_sim,
-title = "Neighbor list collision-driven molecular dynamics simulation for nonspherical hard particles. I. Algorithmic details",
-journal = "Journal of Computational Physics",
-volume = "202",
-number = "2",
-pages = "737 - 764",
-year = "2005",
-issn = "0021-9991",
-doi = "https://doi.org/10.1016/j.jcp.2004.08.014",
-url = "http://www.sciencedirect.com/science/article/pii/S0021999104003146",
-author = "Aleksandar Donev and Salvatore Torquato and Frank H. Stillinger",
-abstract = "In this first part of a series of two papers, we present in considerable detail a collision-driven molecular dynamics algorithm for a system of non-spherical particles, within a parallelepiped simulation domain, under both periodic or hard-wall boundary conditions. The algorithm extends previous event-driven molecular dynamics algorithms for spheres, and is most efficient when applied to systems of particles with relatively small aspect ratios and with small variations in size. We present a novel partial-update near-neighbor list (NNL) algorithm that is superior to previous algorithms at high densities, without compromising the correctness of the algorithm. This efficiency of the algorithm is further increased for systems of very aspherical particles by using bounding sphere complexes (BSC). These techniques will be useful in any particle-based simulation, including Monte Carlo and time-driven molecular dynamics. Additionally, we allow for a non-vanishing rate of deformation of the boundary, which can be used to model macroscopic strain and also alleviate boundary effects for small systems. In the second part of this series of papers we specialize the algorithm to systems of ellipses and ellipsoids and present performance results for our implementation, demonstrating the practical utility of the algorithm."
-}
-
-@book{Wassermann,
-	abstract = {This book is for people who want to learn probability and statistics quickly. It brings together many of the main ideas in modern statistics in one place. The book is suitable for students and researchers in statistics, computer science, data mining and machine learning. This book covers a much wider range of topics than a typical introductory text on mathematical statistics. It includes modern topics like nonparametric curve estimation, bootstrapping and classification, topics that are usually relegated to follow-up courses. The reader is assumed to know calculus and a little linear algebra. No previous knowledge of probability and statistics is required.},
-	added-at = {2016-12-02T12:27:40.000+0100},
-	address = {New York},
-	author = {Wasserman, Larry},
-	biburl = {https://www.bibsonomy.org/bibtex/26eeeed65f018eb61d267c530f549340a/flint63},
-	doi = {10.1007/978-0-387-21736-9},
-	file = {SpringerLink:2000-04/Wassermann04.pdf:PDF;Springer Product page:http\://www.springer.com/978-1-4419-2322-6:URL;Amazon Search inside:http\://www.amazon.de/gp/reader/0387402721/:URL},
-	groups = {public},
-	interhash = {4d24dccf9dc08a9b3bf43e2782bd9244},
-	intrahash = {6eeeed65f018eb61d267c530f549340a},
-	isbn = {978-1-4419-2322-6},
-	issn = {1431-875X},
-	keywords = {01624 103 springer book theory engineering science},
-	publisher = {Springer},
-	series = {Springer Texts in Statistics},
-	timestamp = {2017-07-13T18:18:19.000+0200},
-	title = {All of Statistics: A Concise Course in Statistical Inference},
-	username = {flint63},
-	year = 2004
-}
-
-@book{huang,
-	added-at = {2010-05-10T08:12:01.000+0200},
-	author = {Huang, Kerson},
-	biburl = {https://www.bibsonomy.org/bibtex/2c1351deedab5631d6a1dca678ccc9ad9/dhruvbansal},
-	date-added = {2007-04-26 16:22:56 -0500},
-	date-modified = {2007-04-30 00:58:46 -0500},
-	edition = 2,
-	file = {/home/dhruv/projects/work/papers/papers/Huang_1987.pdf},
-	interhash = {99677c3801fcf5e8e1c6a36417d0a157},
-	intrahash = {c1351deedab5631d6a1dca678ccc9ad9},
-	keywords = {statmech},
-	publisher = {John Wiley \& Sons},
-	rating = {4},
-	read = {Yes},
-	timestamp = {2010-05-10T08:12:04.000+0200},
-	title = {Statistical Mechanics},
-	year = 1987
+@misc{Lakshmanan2011,
+	abstract = {The Landau-Lifshitz-Gilbert (LLG) equation is a fascinating nonlinear evolution equation both from mathematical and physical points of view. It is related to the dynamics of several important physical systems such as ferromagnets, vortex filaments, moving space curves, etc. and has intimate connections with many of the well-known integrable soliton equations, including nonlinear Schr{\"{o}}dinger and sine-Gordon equations. It can admit very many dynamical structures including spin waves, elliptic function waves, solitons, dromions, vortices, spatio-temporal patterns, chaos, etc. depending on the physical and spin dimensions and the nature of interactions. An exciting recent development is that the spin torque effect in nanoferromagnets is described by a generalization of the LLG equation that forms a basic dynamical equation in the field of spintronics. This article will briefly review these developments as a tribute to Robin Bullough who was a great admirer of the LLG equation. {\textcopyright} 2011 The Royal Society.},
+	archivePrefix = {arXiv},
+	arxivId = {1101.1005},
+	author = {Lakshmanan, M.},
+	booktitle = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+	doi = {10.1098/rsta.2010.0319},
+	eprint = {1101.1005},
+	file = {:home/sondre/.var/app/com.elsevier.MendeleyDesktop/data/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lakshmanan - 2011 - The fascinating world of the Landau-Lifshitz-Gilbert equation An overview.pdf:pdf},
+	issn = {1364503X},
+	keywords = {Chaos and patterns,Integrability,LLG equation,Spin systems},
+	month = {mar},
+	number = {1939},
+	pages = {1280--1300},
+	publisher = {Royal Society},
+	title = {{The fascinating world of the Landau-Lifshitz-Gilbert equation: An overview}},
+	url = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.2010.0319},
+	volume = {369},
+	year = {2011}
 }
 
 @misc{sheet,
 	author = {Nordam, Tor},
 	year = 2021,
-	title = {{Exercise 1 - Computational physics TFY4235}}	
+	title = {{Exercise 2 - Computational physics TFY4235}}	
 }
